# watchexec

./: .clippy-lints  .editorconfig  .gitattributes  .gitignore  .travis.yml  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  Watchexec.kdl  appveyor.yml  bors.toml  check-hashes.jaq  cliff.toml  release.toml  test.sh  watchexec-manifest.rc  watchexec.exe.manifest
cli/: Cargo.toml  README.md  build.rs  release.toml  watchexec.exe.manifest
cli/src/: args.rs  cli.rs  config.rs  filterer.rs  handler.rs  main.rs
cli/src/config/: file.rs  init.rs  runtime.rs
cli/src/filterer/: common.rs  globset.rs  tagged.rs
cli/tests/: help.rs
cli/tests/snapshots/: help__help_unix.snap  help__help_windows.snap
crates/audace/: Cargo.toml  README.md  release.toml
crates/audace/src/: lib.rs
crates/bosion/: CHANGELOG.md  Cargo.toml  README.md  release.toml  run-tests.sh
crates/bosion/examples/clap/: Cargo.toml
crates/bosion/examples/default/: Cargo.toml
crates/bosion/examples/no-git/: Cargo.toml  build.rs
crates/bosion/examples/no-std/: Cargo.toml
crates/bosion/examples/snapshots/: build_date.txt  build_datetime.txt  crate_features.txt  default_long_version.txt  default_long_version_with.txt  git_commit_date.txt  git_commit_datetime.txt  git_commit_hash.txt  git_commit_shorthash.txt  no_git_long_version.txt  no_git_long_version_with.txt
crates/bosion/examples/test/: script.rs
crates/bosion/src/: info.rs  lib.rs
crates/cli/: Cargo.toml  README.md  build.rs  release.toml  run-tests.sh  watchexec.exe.manifest
crates/cli/integration/: env.sh  fd-socket.sh  no-shell-unix.sh  socket-unix.sh  socket.sh  stdin-quit.sh  trailingargfile.sh
crates/cli/src/: args.rs  config.rs  dirs.rs  emits.rs  fd_socket.rs  fd_socket_test.rs  filterer.rs  lib.rs  main.rs  os_string_ops.rs  socket.rs  state.rs
crates/cli/src/args/: command.rs  debugging.rs  events.rs  filtering.rs  logging.rs  output.rs
crates/cli/src/config/: init.rs  runtime.rs
crates/cli/src/fd_socket/: fallback.rs  parser.rs  test.rs  unix.rs  windows.rs
crates/cli/src/filterer/: common.rs  globset.rs  parse.rs  proglib.rs  progs.rs  syncval.rs  tagged.rs  windows_norm.rs
crates/cli/src/socket/: fallback.rs  parser.rs  test.rs  unix.rs  windows.rs
crates/cli/tests/: help.rs  ignore.rs
crates/cli/tests/common/: mod.rs
crates/cli/tests/snapshots/: help__help_unix.snap  help__help_windows.snap
crates/events/: CHANGELOG.md  Cargo.toml  README.md  release.toml
crates/events/examples/: parse-and-print.rs
crates/events/src/: event.rs  fs.rs  keyboard.rs  lib.rs  process.rs  sans_notify.rs  serde_formats.rs  signals.rs
crates/events/tests/: json.rs
crates/events/tests/snapshots/: array.json  asymmetric.json  completions.json  metadata.json  paths.json  signals.json  single.json  sources.json
crates/filterer/globset/: CHANGELOG.md  Cargo.toml  README.md  release.toml
crates/filterer/globset/src/: lib.rs
crates/filterer/globset/tests/: filtering.rs
crates/filterer/ignore/: CHANGELOG.md  Cargo.toml  README.md  release.toml
crates/filterer/ignore/src/: lib.rs
crates/filterer/ignore/tests/: filtering.rs
crates/filterer/tagged/: CHANGELOG.md  Cargo.toml  README.md  release.toml
crates/ignore-file/: Cargo.toml  README.md  release.toml
crates/ignore-file/src/: lib.rs
crates/ignore-files/: CHANGELOG.md  Cargo.toml  README.md  release.toml
crates/ignore-files/examples/: bzr_parser.rs  darcs_parser.rs  fossil_parser.rs
crates/ignore-files/src/: discover.rs  error.rs  filter.rs  lib.rs  parse.rs
crates/ignore-files/tests/: bzr_patterns.rs  darcs_boring_integration.rs  fossil_ignore_integration.rs  git_files.rs  git_patterns.rs  git_wildcards.rs  hg_docs_patterns.rs  hg_hgignore_integration.rs  hg_wildcards.rs  mercurial_example_patterns.rs  mercurial_hgignore_integration.rs  parse_git_wildcards.rs  parse_hg_wildcards.rs
crates/lib/: CHANGELOG.md  CITATION.cff  Cargo.toml  README.md  release.toml
crates/lib/examples/: demo.rs  fs.rs  only_commands.rs  only_events.rs  project-origins.rs  readme.rs  restart_run_on_successful_build.rs  signal.rs
crates/lib/src/: action.rs  changeable.rs  command.rs  config.rs  event.rs  filter.rs  fs.rs  handler.rs  ignore.rs  keyboard.rs  late_join_set.rs  lib.rs  paths.rs  project.rs  signal.rs  sources.rs  swaplock.rs  watched_path.rs  watchexec.rs
crates/lib/tests/: env_reporting.rs  error_handler.rs
crates/project-origins/: CHANGELOG.md  Cargo.toml  README.md  release.toml
crates/project-origins/examples/: find-origins.rs
crates/project-origins/src/: lib.rs
crates/signals/: CHANGELOG.md  Cargo.toml  README.md  release.toml
crates/signals/src/: dom.rs  lib.rs  sub.rs
crates/supervisor/: CHANGELOG.md  Cargo.toml  README.md  release.toml
crates/supervisor/src/: command.rs  errors.rs  flag.rs  job.rs  lib.rs  supervisor.rs
crates/supervisor/tests/: programs.rs
lib/: CITATION.cff  Cargo.toml  README.md  release.toml
lib/examples/: demo.rs  fs.rs  print_out.rs  readme.rs  signal.rs
lib/src/: action.rs  command.rs  config.rs  error.rs  event.rs  filter.rs  fs.rs  gitignore.rs  handler.rs  ignore.rs  ignore_files.rs  lib.rs  main.rs  notification_filter.rs  pathop.rs  paths.rs  process.rs  project.rs  run.rs  shell.rs  signal.rs  watcher.rs  watchexec.rs
lib/src/action/: outcome.rs  outcome_worker.rs  process_holder.rs  worker.rs  workingdata.rs
lib/src/command/: process.rs  shell.rs  supervisor.rs
lib/src/error/: critical.rs  runtime.rs  specialised.rs
lib/src/filter/: globset.rs  parse.rs  tagged.rs  types.rs
lib/src/fs/: recursor.rs  watcher.rs  worker.rs  workingdata.rs
lib/src/ignore/: files.rs  filter.rs  tree.rs
lib/src/signal/: process.rs  source.rs
lib/tests/: env_reporting.rs  error_handler.rs  filter_globset.rs  filter_globset_ignorefiles.rs  filter_ignorefiles.rs  filter_tagged_ignorefiles.rs  filter_tagged_nonpaths.rs  filter_tagged_parser.rs  filter_tagged_paths.rs  helpers.rs
lib/tests/helpers/: mod.rs
lib/tests/ignores/: folder.wef  folders  negate  path-patterns.wef  scopes-local
(+153 files in other folders)
