[package]
name = "watchexec"
version = "1.15.0"

authors = ["Matt Green <mattgreenrocks@gmail.com>", "Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0"
description = "Executes commands in response to file modifications"
keywords = ["watcher", "inotify", "fsevents", "kqueue"]
categories = ["command-line-utilities"]

documentation = "https://github.com/watchexec/watchexec"
homepage = "https://github.com/watchexec/watchexec"
repository = "https://github.com/watchexec/watchexec"
readme = "README.md"

edition = "2018"
exclude = ["/pkg", "/bin", "/.github"]

[[bin]]
name = "watchexec"

[dependencies]
derive_builder = "0.10.0"
glob = "0.3.0"
globset = "0.4.6"
lazy_static = "1.1.0"
log = "0.4.14"
notify = "4.0.15"
walkdir = "2.3.2"

[dependencies.clap]
version = "2.33.3"
default-features = false
features = ["wrap_help"]

[dependencies.env_logger]
version = "0.8.3"
default-features = false
features = []

[target.'cfg(unix)'.dependencies]
nix = "0.20.0"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = ["ioapiset", "jobapi2", "tlhelp32"]

[build-dependencies]
embed-resource = "1.6.1"

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ version }-{ target }.tar.xz"
bin-dir = "{ name }-{ version }-{ target }/{ bin }{ format }"
pkg-fmt = "txz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ version }-{ target }.zip"
pkg-fmt = "zip"
