[workspace]
resolver = "2"
members = [
	"crates/lib",
	"crates/cli",
	"crates/events",
	"crates/signals",
	"crates/filterer/globset",
	"crates/filterer/ignore",
	"crates/filterer/tagged",
	"crates/bosion",
	"crates/ignore-files",
	"crates/project-origins",
]

[profile.release]
lto = true
debug = 1 # for stack traces
codegen-units = 1
strip = "symbols"

[profile.dev.build-override]
opt-level = 0
codegen-units = 1024
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

[profile.release.build-override]
opt-level = 0
codegen-units = 1024
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
