[package]
name = "watchexec-cli"
version = "1.16.1"

authors = ["Matt Green <mattgreenrocks@gmail.com>", "Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0"
description = "Executes commands in response to file modifications"
keywords = ["watcher", "filesystem", "cli", "watchexec"]
categories = ["command-line-utilities"]

documentation = "https://github.com/watchexec/watchexec"
homepage = "https://watchexec.github.io"
repository = "https://github.com/watchexec/watchexec"
readme = "README.md"

edition = "2018"

[[bin]]
name = "watchexec"
path = "src/main.rs"

[dependencies]
log = "0.4.14"
watchexec = { path = "../lib", version = "1.16.0" }

[dependencies.clap]
version = "2.33.3"
default-features = false
features = ["wrap_help"]

[dependencies.env_logger]
version = "0.8.3"
default-features = false
features = []

[build-dependencies]
embed-resource = "1.6.1"

[dev-dependencies]
assert_cmd = "1.0.3"
insta = "1.7.1"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/cli-v{ version }/watchexec-{ version }-{ target }.tar.xz"
bin-dir = "watchexec-{ version }-{ target }/{ bin }{ format }"
pkg-fmt = "txz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/cli-v{ version }/watchexec-{ version }-{ target }.zip"
pkg-fmt = "zip"
