[package]
name = "watchexec-cli"
version = "1.18.10"

authors = ["Matt Green <mattgreenrocks@gmail.com>", "Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0"
description = "Executes commands in response to file modifications"
keywords = ["watcher", "filesystem", "cli", "watchexec"]
categories = ["command-line-utilities"]

documentation = "https://watchexec.github.io/docs/#watchexec"
homepage = "https://watchexec.github.io"
repository = "https://github.com/watchexec/watchexec"
readme = "README.md"

rust-version = "1.58.0"
edition = "2021"

[[bin]]
name = "watchexec"
path = "src/main.rs"

[dependencies]
console-subscriber = { version = "0.1.0", optional = true }
dunce = "1.0.2"
futures = "0.3.17"
miette = { version = "3.2.0", features = ["fancy"] }
notify-rust = "4.5.2"
tracing = "0.1.26"
watchexec = { version = "=2.0.0-pre.13", path = "../lib" }

[dependencies.clap]
version = "2.33.3"
default-features = false
features = ["wrap_help"]

[dependencies.tokio]
version = "1.15.0"
features = [
	"fs",
	"io-std",
	"parking_lot",
	"process",
	"rt",
	"rt-multi-thread",
	"signal",
	"sync",
]

[dependencies.tracing-subscriber]
version = "0.3.6"
features = [
	"env-filter",
	"fmt",
]

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.26"

[build-dependencies]
embed-resource = "1.6.1"

[dev-dependencies]
assert_cmd = "2.0.4"
insta = "1.10.0"

[features]
dev-console = ["console-subscriber"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/cli-v{ version }/watchexec-{ version }-{ target }.tar.xz"
bin-dir = "watchexec-{ version }-{ target }/{ bin }{ format }"
pkg-fmt = "txz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/cli-v{ version }/watchexec-{ version }-{ target }.zip"
pkg-fmt = "zip"

[package.metadata.deb]
maintainer = "Félix Saparelli <felix@passcod.name>"
license-file = ["../LICENSE", "0"]
section = "utility"
# conf-files = [] # look me up when config file lands
assets = [
	["../target/release/watchexec", "usr/bin/", "755"],
	["README.md", "usr/share/doc/watchexec/README", "644"],
	["../doc/watchexec.1.html", "usr/share/doc/watchexec/watchexec.1.html", "644"],
	["../doc/watchexec.1", "usr/share/man/man1/watchexec.1.html", "644"],
	["../completions/zsh", "usr/share/zsh/site-functions/_watchexec", "644"],
	["../doc/logo.svg", "usr/share/icons/hicolor/scalable/apps/watchexec.svg", "644"],
]

[package.metadata.generate-rpm]
assets = [
	{ source = "../target/release/watchexec", dest = "/usr/bin/", mode = "755" },
	{ source = "../cli/README.md", dest = "/usr/share/doc/watchexec/README", mode = "644", doc = true },
	{ source = "../doc/watchexec.1.html", dest = "/usr/share/doc/watchexec/watchexec.1.html", mode = "644", doc = true },
	{ source = "../doc/watchexec.1", dest = "/usr/share/man/man1/watchexec.1.html", mode = "644" },
	{ source = "../completions/zsh", dest = "/usr/share/zsh/site-functions/_watchexec", mode = "644" },
	{ source = "../doc/logo.svg", dest = "/usr/share/icons/hicolor/scalable/apps/watchexec.svg", mode = "644" },
	# set conf = true for config file when that lands
]
