[package]
name = "watchexec"
version = "1.17.1"

authors = ["Matt Green <mattgreenrocks@gmail.com>", "Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0"
description = "Library to execute commands in response to file modifications"
keywords = ["watcher", "filesystem", "watchexec"]

documentation = "https://docs.rs/watchexec"
homepage = "https://watchexec.github.io"
repository = "https://github.com/watchexec/watchexec"
readme = "README.md"

edition = "2018"

[dependencies]
async-recursion = "0.3.2"
async-stream = "0.3.2"
atomic-take = "1.0.0"
clearscreen = "1.0.6"
dunce = "1.0.2"
futures = "0.3.16"
git2 = "0.13.22"
globset = "0.4.8"
ignore = "0.4.18"
miette = "3.2.0"
nom = "7.0.0"
notify = "5.0.0-pre.12"
once_cell = "1.8.0"
regex = "1.5.4"
thiserror = "1.0.26"
tracing = "0.1.26"
unicase = "2.6.0"

[dependencies.command-group]
version = "1.0.5"
features = ["with-tokio"]

[dependencies.tokio]
version = "1.10.0"
features = ["full"]

[dependencies.tokio-stream]
version = "0.1.7"
features = ["fs"]

[dev-dependencies]
tracing-subscriber = "0.2.19"
