[package]
name = "watchexec"
version = "2.0.0-pre.12"

authors = ["Matt Green <mattgreenrocks@gmail.com>", "Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0"
description = "Library to execute commands in response to file modifications"
keywords = ["watcher", "filesystem", "watchexec"]

documentation = "https://docs.rs/watchexec"
homepage = "https://watchexec.github.io"
repository = "https://github.com/watchexec/watchexec"
readme = "README.md"

rust-version = "1.58.0"
edition = "2021"

[dependencies]
async-recursion = "1.0.0"
async-stream = "0.3.2"
atomic-take = "1.0.0"
clearscreen = "1.0.9"
dunce = "1.0.2"
futures = "0.3.16"
globset = "0.4.8"
ignore = "0.4.18"
miette = "3.2.0"
nom = "7.0.0"
once_cell = "1.8.0"
regex = "1.5.4"
thiserror = "1.0.26"
tracing = "0.1.26"
unicase = "2.6.0"

[dependencies.command-group]
version = "1.0.8"
features = ["with-tokio"]

[dependencies.git2]
version = "0.13.22"
default-features = false

[dependencies.notify]
version = "=5.0.0-pre.14"
default-features = false
features = ["macos_kqueue"]

[dependencies.tokio]
version = "1.15.0"
features = [
	"fs",
	"io-std",
	"parking_lot",
	"process",
	"rt",
	"rt-multi-thread",
	"signal",
	"sync",
]

[dependencies.tokio-stream]
version = "0.1.7"
features = ["fs"]

[target.'cfg(unix)'.dependencies]
libc = "0.2.104"

[dev-dependencies]
tracing-subscriber = "0.3.6"
