[package]
name = "bosion"
version = "1.0.0"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0 OR MIT"
description = "Gather build information for verbose versions flags"
keywords = ["version", "git", "verbose", "long"]

documentation = "https://docs.rs/bosion"
repository = "https://github.com/watchexec/watchexec"
readme = "README.md"

rust-version = "1.64.0"
edition = "2021"

[dependencies.time]
version = "0.3.20"
features = ["macros", "formatting"]

[dependencies.gix]
version = "0.44.1"
optional = true

[features]
default = ["git", "reproducible", "std"]

### Read from git repo, provide GIT_* vars
git = ["dep:gix"]

### Read from SOURCE_DATE_EPOCH when available
reproducible = []

### Provide a long_version_with() function to add extra info
###
### Specifically this is std support for the _using_ crate, not for the bosion crate itself. It's
### assumed that the bosion crate is always std, as it runs in build.rs.
std = []
