[package]
name = "bosion"
version = "1.0.2"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0 OR MIT"
description = "Gather build information for verbose versions flags"
keywords = ["version", "git", "verbose", "long"]

documentation = "https://docs.rs/bosion"
repository = "https://github.com/watchexec/watchexec"
readme = "README.md"

rust-version = "1.64.0"
edition = "2021"

[dependencies]
time = { version = "0.3.30", features = ["macros", "formatting"] }
gix-features = { version = "0.37.2", features = ["rustsha1", "walkdir", "zlib-rust-backend"], optional = true }
gix-hash = { version = "0.14.1", optional = true }
gix-pack = { version = "0.46.1", default-features = false, optional = true }
hex = { version = "0.4.3", optional = true }

[features]
default = ["git", "reproducible", "std"]

### Read from git repo, provide GIT_* vars
git = ["dep:gix-features", "dep:gix-hash", "dep:gix-pack", "dep:hex"]

### Read from SOURCE_DATE_EPOCH when available
reproducible = []

### Provide a long_version_with() function to add extra info
###
### Specifically this is std support for the _using_ crate, not for the bosion crate itself. It's
### assumed that the bosion crate is always std, as it runs in build.rs.
std = []
