[package]
name = "bosion"
version = "1.1.3"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0 OR MIT"
description = "Gather build information for verbose versions flags"
keywords = ["version", "git", "verbose", "long"]

documentation = "https://docs.rs/bosion"
repository = "https://github.com/watchexec/watchexec"
readme = "README.md"

rust-version = "1.64.0"
edition = "2021"

[dependencies]
flate2 = { version = "1.0.35", optional = true }

[dependencies.time]
version = "0.3.30"
features = ["macros", "formatting"]

[features]
default = ["git", "reproducible", "std"]

### Read from git repo, provide GIT_* vars
git = ["dep:flate2"]

### Read from SOURCE_DATE_EPOCH when available
reproducible = []

### Provide a long_version_with() function to add extra info
###
### Specifically this is std support for the _using_ crate, not for the bosion crate itself. It's
### assumed that the bosion crate is always std, as it runs in build.rs.
std = []

[lints.clippy]
nursery = "warn"
pedantic = "warn"
module_name_repetitions = "allow"
similar_names = "allow"
cognitive_complexity = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
default_trait_access = "allow"
enum_glob_use = "allow"
option_if_let_else = "allow"
blocks_in_conditions = "allow"
needless_doctest_main = "allow"
