[package]
name = "watchexec-cli"
version = "1.22.2"

authors = ["Félix Saparelli <felix@passcod.name>", "Matt Green <mattgreenrocks@gmail.com>"]
license = "Apache-2.0"
description = "Executes commands in response to file modifications"
keywords = ["watcher", "filesystem", "cli", "watchexec"]
categories = ["command-line-utilities"]

documentation = "https://watchexec.github.io/docs/#watchexec"
homepage = "https://watchexec.github.io"
repository = "https://github.com/watchexec/watchexec"
readme = "README.md"

edition = "2021"

[[bin]]
name = "watchexec"
path = "src/main.rs"

[dependencies]
argfile = "0.1.5"
chrono = "0.4.23"
clap_complete = "4.1.4"
clap_complete_nushell = "0.1.10"
clap_mangen = "0.2.9"
dirs = "5.0.0"
futures = "0.3.17"
humantime = "2.1.0"
is-terminal = "0.4.4"
notify-rust = "4.5.2"
serde_json = "1.0.94"
tempfile = "3.4.0"
tracing = "0.1.26"
which = "4.4.0"

[dependencies.command-group]
version = "2.1.0"
features = ["with-tokio"]

[dependencies.console-subscriber]
version = "0.1.0"
optional = true

[dependencies.clap]
version = "4.1.8"
features = ["cargo", "derive", "env", "wrap_help"]

[dependencies.ignore-files]
version = "1.2.0"
path = "../ignore-files"

[dependencies.miette]
version = "5.3.0"
features = ["fancy"]

[dependencies.project-origins]
version = "1.2.0"
path = "../project-origins"

[dependencies.watchexec]
version = "2.3.0"
path = "../lib"

[dependencies.watchexec-events]
version = "1.0.0"
path = "../events"
features = ["serde"]

[dependencies.watchexec-signals]
version = "1.0.0"
path = "../signals"

[dependencies.watchexec-filterer-globset]
version = "1.2.0"
path = "../filterer/globset"

[dependencies.tokio]
version = "1.24.2"
features = [
	"fs",
	"io-std",
	"process",
	"rt",
	"rt-multi-thread",
	"signal",
	"sync",
]

[dependencies.tracing-subscriber]
version = "0.3.6"
features = [
	"env-filter",
	"fmt",
	"json",
	"tracing-log",
]

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.26"

[target.'cfg(target_os = "linux")'.dependencies]
shadow-rs = "0.21.0"

[target.'cfg(target_os = "linux")'.build-dependencies]
shadow-rs = "0.21.0"

[build-dependencies]
embed-resource = "2.1.1"

[build-dependencies.bosion]
version = "1.0.0"
path = "../bosion"

[features]
## For debugging only: enables the Tokio Console.
dev-console = ["console-subscriber"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/watchexec-{ version }-{ target }.{ archive-format }"
bin-dir = "watchexec-{ version }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "txz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.deb]
maintainer = "Félix Saparelli <felix@passcod.name>"
license-file = ["../../LICENSE", "0"]
section = "utility"
depends = "libc6, libgcc-s1" # not needed for musl, but see below
# conf-files = [] # look me up when config file lands
assets = [
	["../../target/release/watchexec", "usr/bin/watchexec", "755"],
	["README.md", "usr/share/doc/watchexec/README", "644"],
	["../../doc/watchexec.1.md", "usr/share/doc/watchexec/watchexec.1.md", "644"],
	["../../doc/watchexec.1", "usr/share/man/man1/watchexec.1.html", "644"],
	["../../completions/bash", "usr/share/bash-completion/completions/watchexec", "644"],
	["../../completions/fish", "usr/share/fish/completions/watchexec.fish", "644"],
	["../../completions/zsh", "usr/share/zsh/site-functions/_watchexec", "644"],
	["../../doc/logo.svg", "usr/share/icons/hicolor/scalable/apps/watchexec.svg", "644"],
]

[package.metadata.generate-rpm]
assets = [
	{ source = "../../target/release/watchexec", dest = "/usr/bin/watchexec", mode = "755" },
	{ source = "README.md", dest = "/usr/share/doc/watchexec/README", mode = "644", doc = true },
	{ source = "../../doc/watchexec.1.md", dest = "/usr/share/doc/watchexec/watchexec.1.md", mode = "644", doc = true },
	{ source = "../../doc/watchexec.1", dest = "/usr/share/man/man1/watchexec.1.html", mode = "644" },
	{ source = "../../completions/bash", dest = "/usr/share/bash-completion/completions/watchexec", mode = "644" },
	{ source = "../../completions/fish", dest = "/usr/share/fish/completions/watchexec.fish", mode = "644" },
	{ source = "../../completions/zsh", dest = "/usr/share/zsh/site-functions/_watchexec", mode = "644" },
	{ source = "../../doc/logo.svg", dest = "/usr/share/icons/hicolor/scalable/apps/watchexec.svg", mode = "644" },
	# set conf = true for config file when that lands
]

auto-req = "disabled"
# technically incorrect when using musl, but these are probably
# present on every rpm-using system, so let's worry about it if
# someone asks.
[package.metadata.generate-rpm.requires]
glibc = "*"
libgcc = "*"
