[package]
name = "watchexec-events"
version = "5.0.0"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0 OR MIT"
description = "Watchexec's event types"
keywords = ["watchexec", "event", "format", "json"]

documentation = "https://docs.rs/watchexec-events"
repository = "https://github.com/watchexec/watchexec"
readme = "README.md"

rust-version = "1.61.0"
edition = "2021"

[dependencies.notify-types]
version = "2.0.0"
optional = true

[dependencies.serde]
version = "1.0.183"
optional = true
features = ["derive"]

[dependencies.watchexec-signals]
version = "4.0.1"
path = "../signals"
default-features = false

[dev-dependencies]
snapbox = "0.6.18"
serde_json = "1.0.107"

[features]
default = ["notify"]
notify = ["dep:notify-types"]
serde = ["dep:serde", "notify-types?/serde", "watchexec-signals/serde"]

[lints.clippy]
nursery = "warn"
pedantic = "warn"
module_name_repetitions = "allow"
similar_names = "allow"
cognitive_complexity = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
default_trait_access = "allow"
enum_glob_use = "allow"
option_if_let_else = "allow"
blocks_in_conditions = "allow"
