[package]
name = "ignore-files"
version = "1.2.0"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0"
description = "Find, parse, and interpret ignore files"
keywords = ["ignore", "files", "discover", "find"]

documentation = "https://docs.rs/ignore-files"
repository = "https://github.com/watchexec/watchexec"
readme = "README.md"

rust-version = "1.58.0"
edition = "2021"

[dependencies]
futures = "0.3.21"
gix-config = "0.21.0"
ignore = "0.4.18"
miette = "5.3.0"
thiserror = "1.0.31"
tokio = { version = "1.24.2", default-features = false, features = ["fs"] }
tracing = "0.1.35"

[dependencies.project-origins]
version = "1.2.0"
path = "../project-origins"
