[package]
name = "ignore-files"
version = "1.3.1"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0"
description = "Find, parse, and interpret ignore files"
keywords = ["ignore", "files", "discover", "find"]

documentation = "https://docs.rs/ignore-files"
repository = "https://github.com/watchexec/watchexec"
readme = "README.md"

rust-version = "1.58.0"
edition = "2021"

[dependencies]
futures = "0.3.21"
gix-config = "0.26.1"
ignore = "0.4.18"
miette = "5.3.0"
thiserror = "1.0.31"
tokio = { version = "1.24.2", default-features = false, features = ["fs", "macros", "rt"] }
tracing = "0.1.35"
radix_trie = "0.2.1"
dunce = "1.0.4"


[dependencies.project-origins]
version = "1.2.0"
path = "../project-origins"
