[package]
name = "ignore-files"
version = "3.0.0"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0"
description = "Find, parse, and interpret ignore files"
keywords = ["ignore", "files", "discover", "find"]

documentation = "https://docs.rs/ignore-files"
repository = "https://github.com/watchexec/watchexec"
readme = "README.md"

rust-version = "1.58.0"
edition = "2021"

[dependencies]
futures = "0.3.29"
gix-config = "0.36.1"
ignore = "0.4.18"
miette = "7.2.0"
normalize-path = "0.2.1"
thiserror = "1.0.50"
tracing = "0.1.40"
radix_trie = "0.2.1"
dunce = "1.0.4"

[dependencies.tokio]
version = "1.33.0"
default-features = false
features = [
	"fs",
	"macros",
	"rt",
]

[dependencies.project-origins]
version = "1.4.0"
path = "../project-origins"

[dev-dependencies]
tracing-subscriber = "0.3.6"

[features]
default = []

## Don't hide ignore::gitignore::Gitignore Debug impl
full_debug = []
