[package]
name = "watchexec"
version = "4.0.0"

authors = ["Félix Saparelli <felix@passcod.name>", "Matt Green <mattgreenrocks@gmail.com>"]
license = "Apache-2.0"
description = "Library to execute commands in response to file modifications"
keywords = ["watcher", "filesystem", "watchexec"]

documentation = "https://docs.rs/watchexec"
homepage = "https://watchexec.github.io"
repository = "https://github.com/watchexec/watchexec"
readme = "README.md"

rust-version = "1.61.0"
edition = "2021"

[dependencies]
async-priority-channel = "0.2.0"
async-recursion = "1.0.5"
atomic-take = "1.0.0"
futures = "0.3.29"
miette = "7.2.0"
notify = "6.0.0"
once_cell = "1.8.0"
thiserror = "1.0.44"
normalize-path = "0.2.0"

[dependencies.process-wrap]
version = "8.0.0"
features = ["tokio1"]

[dependencies.watchexec-events]
version = "3.0.0"
path = "../events"

[dependencies.watchexec-signals]
version = "3.0.0"
path = "../signals"

[dependencies.watchexec-supervisor]
version = "2.0.0"
path = "../supervisor"

[dependencies.ignore-files]
version = "3.0.0"
path = "../ignore-files"

[dependencies.project-origins]
version = "1.4.0"
path = "../project-origins"

[dependencies.tokio]
version = "1.33.0"
features = [
	"fs",
	"io-std",
	"process",
	"rt",
	"rt-multi-thread",
	"signal",
	"sync",
]

[dependencies.tracing]
version = "0.1.40"
features = ["log"]

[target.'cfg(unix)'.dependencies.nix]
version = "0.28.0"
features = ["signal"]

[dev-dependencies.tracing-subscriber]
version = "0.3.6"
features = ["env-filter"]
